<resources>
    <string name="app_music">Music</string>
    <string name="app_description">Description</string>
    <string name="app_games">Games</string>
    <string name="app_calculate">Calculate</string>
    <string name="app_calculator">Calculator</string>
    <string name="text_song_name">Bottle and a Beat</string>
    <string name="text_band_name">All Time Low</string>
    <string name="text_btn_seven">7</string>
    <string name="text_btn_eight">8</string>
    <string name="text_btn_nine">9</string>
    <string name="text_btn_del">DEL</string>
    <string name="text_btn_four">4</string>
    <string name="text_btn_five">5</string>
    <string name="text_btn_six">6</string>
    <string name="text_btn_div">/</string>
    <string name="text_btn_one">1</string>
    <string name="text_btn_two">2</string>
    <string name="text_btn_three">3</string>
    <string name="text_btn_minus">-</string>
    <string name="text_btn_comma">,</string>
    <string name="text_btn_zero">0</string>
    <string name="text_btn_equally">=</string>
    <string name="text_btn_plus">+</string>
    <string name="action_settings">Settings</string>
    <string name="text_btn_multi">*</string>
    <string name="action_market">Play Маркет</string>
    <string name="action_share">Поделиться</string>
    <string name="tab_properties">Properties</string>
    <string name="text_progress">Достижения</string>
    <string name="text_rating">Рейтинг игроков</string>
    <string name="text_save_geme">Сохраненные игры</string>
    <string name="tab_description">Описание</string>
    <string name="info_primery_one">Busuu предоставляет тебе возможность изучать 11 различных языков. Выучить английский, французский, испанский, немецкий, итальянский, японский, португальский, польский, китайский, русский или турецкий посредством полностью интерактивного курса, основанного на твоих целях, легко!</string>
    <string name="tab_primery_two">MESSAGE: Congratulations!</string>
    <string name="info_primery_three">Изучение иностранного языка - невероятно полезный опыт, который поможет тебе повысить уверенность в себе. Ты сможешь по-новому познакомиться с зарубежными странами во время путешествий, повысить свои шансы найти хорошую работу, учиться или жить за границей, или же познакомиться с новыми людьми и приобрести друзей на всю жизнь!</string>
    <string name="text_name">Eva Evil</string>
    <string name="text_level">4 000 XP до след.уровня</string>
    <string name="text_description_owner_games">Мастер казуальных игр</string>
    <string name="text_header">Откройте новые игры</string>
    <string name="text_btn_more">ЕЩЕ</string>
    <string name="text_game_one">Clash Royal</string>
    <string name="text_description_game_one">Supercell</string>
    <string name="text_price">БЕСПЛАТНО</string>
    <string name="text_game_two">Dragon Land</string>
    <string name="text_game_tree">DIRAC</string>
    <string name="text_description_game_two">socialpoint</string>
    <string name="text_description_game_tree">Mediocre</string>
    <string name="text_price_two">1.99$</string>
    <string name="text_btn_separately">Separately</string>
    <string name="text_btn_in_turn">In turn</string>
    <string name="text_btn_view_music">M</string>
    <string name="text_name_game">Psycho Nauts 2</string>
    <string name="text_producer_game">Noodlecake Studios Inc</string>
    <string name="ic_evaluation">3+</string>
    <string name="text_btn_install">Установить</string>
    <string name="text_services">Есть платный контент</string>
    <string name="text_saving_count">Количество скачиваний</string>
    <string name="text_rating_stars">135 618</string>
    <string name="text_link">Экшен</string>
    <string name="text_similar_games">Похожие</string>
    <string name="info_game">Фил — очень милый, но неуклюжий миньон, который умудрился затопить корабль своих друзей. Теперь ему предстоит превратить необитаемый остров в райский уголок. Создатели мультфильма "Миньоны" — Illumination Entertainment — и EA приглашают тебя в невероятное приключение с любимыми героями!</string>
    <string name="action_read_more">ЧИТАТЬ ДАЛЬШЕ</string>
    <string name="tab_rating">Оценить приложение</string>
    <string name="text_user_name">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_profile_name">Profile Name</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_qustion">Have an account already?</string>
    <string name="text_time">00ч.00м.00с.</string>
</resources>

