<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        />
    <Button
        android:id="@+id/button_seven"
        android:text="@string/text_btn_seven"
        android:layout_below="@id/space"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:id="@+id/button_four"
        android:text="@string/text_btn_four"
        android:layout_below="@id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_one"
        android:text="@string/text_btn_one"
        android:layout_below="@id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonComma"
        android:text="@string/text_btn_comma"
        android:layout_below="@id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_eight"
        android:text="@string/text_btn_eight"
        android:layout_toRightOf="@id/button_seven"
        android:layout_below="@id/space"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_five"
        android:text="@string/text_btn_five"
        android:layout_toRightOf="@id/button_four"
        android:layout_below="@id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_two"
        android:text="@string/text_btn_two"
        android:layout_toRightOf="@id/button_one"
        android:layout_below="@id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_zero"
        android:text="@string/text_btn_zero"
        android:layout_toRightOf="@id/buttonComma"
        android:layout_below="@id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_nine"
        android:text="@string/text_btn_nine"
        android:layout_toRightOf="@id/button_eight"
        android:layout_below="@id/space"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_six"
        android:text="@string/text_btn_six"
        android:layout_toRightOf="@id/button_five"
        android:layout_below="@id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/button_three"
        android:text="@string/text_btn_three"
        android:layout_toRightOf="@id/button_two"
        android:layout_below="@id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonEqually"
        android:text="@string/text_btn_equally"
        android:layout_toRightOf="@id/button_zero"
        android:layout_below="@id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttondDel"
        android:text="@string/text_btn_del"
        android:layout_toRightOf="@id/button_nine"
        android:layout_below="@id/space"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonDiv"
        android:text="@string/text_btn_div"
        android:layout_toRightOf="@id/button_six"
        android:layout_below="@id/buttondDel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonMulti"
        android:text="@string/text_btn_multi"
        android:layout_toRightOf="@id/button_three"
        android:layout_below="@id/buttonDiv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonMin"
        android:text="@string/text_btn_minus"
        android:layout_toRightOf="@id/button_three"
        android:layout_below="@id/buttonMulti"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonPlus"
        android:text="@string/text_btn_plus"
        android:layout_toRightOf="@id/buttonEqually"
        android:layout_below="@id/buttonMin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>