<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/imageButtonMarket"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/number_height"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_play_market"
            android:text="@string/action_market" />

        <Button
            android:id="@+id/imageButtonShare"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/number_height"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share"
            android:text="@string/action_share" />
    </LinearLayout>

    <View
        android:id="@+id/view_separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/buttonPanel"
        android:background="@color/colorLightGray" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPanel"
        android:text="@string/tab_properties"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:id="@+id/panelProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_rating_small"
            android:drawablePadding="@dimen/corners"
            android:text="@string/text_progress"
            android:textSize="@dimen/properties_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_crown_small"
            android:drawablePadding="@dimen/corners"
            android:text="@string/text_rating"
            android:textSize="@dimen/properties_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_save_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panelProperties"
        android:drawableLeft="@drawable/ic_save"
        android:drawablePadding="@dimen/corners"
        android:text="@string/text_save_geme"
        android:textSize="@dimen/properties_size" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_save_game"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/tab_description"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textPrimery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/info_primery_one" />

    <TextView
        android:id="@+id/textPrimery2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPrimery"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/tab_primery_two"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textPrimery3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textPrimery2"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/info_primery_three" />

</RelativeLayout>