<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="9"
    android:rowCount="10"
    android:orientation="horizontal">

    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_seven"
        android:text="@string/text_btn_seven"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_eight"
        android:text="@string/text_btn_eight"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_nine"
        android:text="@string/text_btn_nine"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_del"
        android:text="@string/text_btn_del"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_four"
        android:text="@string/text_btn_four"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_five"
        android:text="@string/text_btn_five"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_six"
        android:text="@string/text_btn_six"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:layout_rowSpan="1"
        android:id="@+id/btn_div"
        android:text="@string/text_btn_div"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:layout_rowSpan="1"
        android:id="@+id/btn_multi"
        android:text="@string/text_btn_multi"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_one"
        android:text="@string/text_btn_one"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_two"
        android:text="@string/text_btn_two"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_tree"
        android:text="@string/text_btn_three"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_min"
        android:text="@string/text_btn_minus"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/buttonComma"
        android:text="@string/text_btn_comma"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_zero"
        android:text="@string/text_btn_zero"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/buttonEqually"
        android:text="@string/text_btn_equally"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:background="@drawable/btn_bground"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:layout_rowSpan="2"
        android:id="@+id/btn_plus"
        android:text="@string/text_btn_plus"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:background="@drawable/btn_bground_light"
        style="?android:attr/borderlessButtonStyle" />

    <Space
        android:layout_width="45dp"
        android:layout_column="0"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="1"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="2"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="4"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="5"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="3"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="6"
        android:layout_row="8" />

    <Space
        android:layout_width="45dp"
        android:layout_column="7"
        android:layout_row="8" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="0" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="1" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="2" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="3" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="4" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="5" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="6" />

    <Space
        android:layout_height="45dp"
        android:layout_column="8"
        android:layout_row="7" />

</GridLayout>

