<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/space_header">

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/text_user_name"
        android:ems="10"
        android:drawableLeft="@drawable/ic_user_name"
        android:maxLines="1"
        android:singleLine="true"
        android:drawablePadding="@dimen/space_header" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/text_email"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:maxLines="1"
        android:singleLine="true"
        android:drawablePadding="@dimen/space_header" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/text_password"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:maxLines="1"
        android:singleLine="true"
        android:drawablePadding="@dimen/space_header"  />

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/text_profile_name"
        android:drawableLeft="@drawable/ic_profile_name"
        android:ems="10"
        android:maxLines="1"
        android:singleLine="true"
        android:drawablePadding="@dimen/space_header" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_header"
        android:text="@string/action_sign_up"
        android:background="@drawable/btn_sign_up"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Space
        android:id="@+id/space_border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btb_qustion"
        android:text="@string/action_qustion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        style="?attr/borderlessButtonStyle"/>
</LinearLayout>